[gd_scene load_steps=6 format=3 uid="uid://csmrrgvs4fy1"]

[ext_resource type="Script" path="res://Scenes/Menu/level_selection_menu.gd" id="1_ar8is"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wfawe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uqbx6"]
bg_color = Color(0.396491, 0.425692, 0.679036, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.360784)
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p07yt"]
bg_color = Color(0.283338, 0.305692, 0.525613, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.360784)
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7s1v"]
bg_color = Color(0.548657, 0.581298, 0.810698, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.360784)
shadow_size = 5
shadow_offset = Vector2(0, 3.4)

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ar8is")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 16.0
offset_right = 45.0
offset_bottom = 42.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 80.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -64

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = -64
alignment = 2

[node name="Level1Button" type="Button" parent="BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wfawe")
theme_override_styles/hover = SubResource("StyleBoxFlat_uqbx6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p07yt")
theme_override_styles/normal = SubResource("StyleBoxFlat_i7s1v")
text = "Level 1"

[node name="Level2Button" type="Button" parent="BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wfawe")
theme_override_styles/hover = SubResource("StyleBoxFlat_uqbx6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p07yt")
theme_override_styles/normal = SubResource("StyleBoxFlat_i7s1v")
disabled = true
text = "Level 2"

[node name="Level3Button" type="Button" parent="BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wfawe")
theme_override_styles/hover = SubResource("StyleBoxFlat_uqbx6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p07yt")
theme_override_styles/normal = SubResource("StyleBoxFlat_i7s1v")
disabled = true
text = "Level 3"

[node name="VBoxContainer2" type="VBoxContainer" parent="BoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = -64
alignment = 2

[node name="Level4Button" type="Button" parent="BoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wfawe")
theme_override_styles/hover = SubResource("StyleBoxFlat_uqbx6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p07yt")
theme_override_styles/normal = SubResource("StyleBoxFlat_i7s1v")
disabled = true
text = "Level 4"

[node name="Level5Button" type="Button" parent="BoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wfawe")
theme_override_styles/hover = SubResource("StyleBoxFlat_uqbx6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p07yt")
theme_override_styles/normal = SubResource("StyleBoxFlat_i7s1v")
disabled = true
text = "Level 5"

[node name="Level6Button" type="Button" parent="BoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_wfawe")
theme_override_styles/hover = SubResource("StyleBoxFlat_uqbx6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p07yt")
theme_override_styles/normal = SubResource("StyleBoxFlat_i7s1v")
disabled = true
text = "Level 6"

[node name="ReturnButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = -1
offset_left = 32.0
offset_top = 32.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 30
text = "Return"

[connection signal="pressed" from="BoxContainer/VBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Level4Button" to="." method="_on_level_4_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Level5Button" to="." method="_on_level_5_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer2/Level6Button" to="." method="_on_level_6_button_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
